--- a/v1/styles.css
+++ b/v1/styles.css
@@ -14,7 +14,9 @@ header .logo img{height:50px;padding:15px;}
 
 .main-container {padding:15px;}
 .main-container .image-container {width:60%;float:left;position: relative;}
-.main-container .image-container .image-overlay{background-color: rgba(0, 0, 0, .1); height: 100%; width: 100%; position: absolute;}
+.main-container .image-container .image-overlay{background-color: rgba(0, 0, 0, 0); height: 100%; width: 100%; position: absolute;}
+.main-container .image-container .image-overlay .deco-overlay {text-align:center;position: absolute;top: 25%;}
+.main-container .image-container .image-overlay .deco-overlay img{width:40%;opacity: .3;}
 .main-container .image-container img{width:100%;}
 
 .main-container .option-container {width:40%;float:left;}
@@ -25,7 +27,7 @@ header .logo img{height:50px;padding:15px;}
 
 
 
-footer {border-top: 1px solid #ccc;padding: 15px;clear: both;}
+footer {/*border-top: 1px solid #ccc;*/padding: 15px;clear: both;}
 footer ul.buttons {padding-left:0px;margin: 0px;}
 footer ul.buttons li {list-style:none;display:inline-block;width: 32%;text-align: center;}
 footer ul.buttons li button {width: 80%;padding: 10px; }
