api documentaion page added, custom id and class tags

--- a/v1/styles.css
+++ b/v1/styles.css
@@ -10,24 +10,24 @@ table {border-collapse: collapse; border-spacing: 0; }
 body{margin:0px;}
 
 header {border-bottom:1px solid #ccc;display:none;}
-header .logo img{height:50px;padding:15px;}
+header ._bcg-logo img{height:50px;padding:15px;}
 
-.main-container {padding:15px;}
-.main-container .image-container {width:60%;float:left;position: relative;}
-.main-container .image-container .image-overlay{background-color: rgba(0, 0, 0, 0); height: 100%; width: 100%; position: absolute;}
-.main-container .image-container .image-overlay .deco-overlay {text-align:center;position: absolute;top: 25%;}
-.main-container .image-container .image-overlay .deco-overlay img{width:40%;opacity: .3;}
-.main-container .image-container img{width:100%;}
+._bcg-main-container {padding:15px;}
+._bcg-main-container ._bcg-image-container {width:60%;float:left;position: relative;}
+._bcg-main-container ._bcg-image-container ._bcg-image-overlay{background-color: rgba(0, 0, 0, 0); height: 100%; width: 100%; position: absolute;}
+._bcg-main-container ._bcg-image-container ._bcg-image-overlay ._bcg-deco-overlay {text-align:center;position: absolute;top: 25%;}
+._bcg-main-container ._bcg-image-container ._bcg-image-overlay ._bcg-deco-overlay img{width:40%;opacity: .3;}
+._bcg-main-container ._bcg-image-container img{width:100%;}
 
-.main-container .option-container {width:40%;float:left;}
-.main-container .option-container > div {padding:10px;}
-.main-container .option-container ul li{border: 2px solid #ccc; margin: 10px 0px; padding: 10px;cursor:pointer;color:#999;}
-.main-container .option-container ul li:hover{border-color: #777; color:#777;}
-.main-container .option-container ul li.selected{border-color: #777; color:#777;}
+._bcg-main-container ._bcg-option-container {width:40%;float:left;}
+._bcg-main-container ._bcg-option-container > div {padding:10px;}
+._bcg-main-container ._bcg-option-container ul li{border: 2px solid #ccc; margin: 10px 0px; padding: 10px;cursor:pointer;color:#999;}
+._bcg-main-container ._bcg-option-container ul li:hover{border-color: #777; color:#777;}
+._bcg-main-container ._bcg-option-container ul li.selected{border-color: #777; color:#777;}
 
 
 
-footer {/*border-top: 1px solid #ccc;*/padding: 15px;clear: both;}
-footer ul.buttons {padding-left:0px;margin: 0px;}
-footer ul.buttons li {list-style:none;display:inline-block;width: 32%;text-align: center;}
-footer ul.buttons li button {width: 80%;padding: 10px; }
+footer {padding: 15px;clear: both;}
+footer ul._bcg-buttons {padding-left:0px;margin: 0px;}
+footer ul._bcg-buttons li {list-style:none;display:inline-block;width: 32%;text-align: center;}
+footer ul._bcg-buttons li button {width: 80%;padding: 10px; }
